2006-04-26  Matthias Wimmer  <m@tthias.eu>

    * clients.c: fixing a compiler warning of gcc

2005-11-22  Matthias Wimmer  <m@tthias.net>

    * configure.in: make IDN a requirement, check for GNU SASL

2005-11-01  Matthias Wimmer  <m@tthias.net>

    * mio/mio.c: changing typecast for accept() call to fix a compiler warning
    * clients.c: fixing memory leak, fixing STARTTLS not to send an error back

2005-04-07  Matthias Wimmer  <m@tthias.net>

    * clients.c: implemented STARTTLS
    * jadc2s.c: same
    * jadc2s.h: same

2004-10-09  Matthias Wimmer  <m@tthias.net>

    * clients.c: Fixing problem reported by Pablo Herrero

2004-09-07  Matthias Wimmer  <m@tthias.net>

    * xmlparse/*: removed expat sources from jadc2s and link against libexpat
    * configure.in: same
    * jadc2s.h: same
    * Makefile.am: same
    * util/config.c: same
    * util/util.h: make some function arguments constant

2004-09-03  Matthias Wimmer  <m@tthias.net>

    * util/util.c: jid_environment has do be defined even without libidn

2004-09-01  Matthias Wimmer  <m@tthias.net>

    * util/pool.c: Remove pmalloc_x, we don't use it
    * util/util.c: same

2004-07-15  Matthias Wimmer  <m@tthias.net>

    * README.maintainer: Reminder not to generate broken distributions
    * clients.c: Cache stringprep results
    * conn.c: same
    * connect.c: same
    * jadc2s.c: same
    * jadc2s.h: same
    * util/jid.c: same
    * util/util.h: same
    * configure.in: Use pkg-config to check for openssl
    * ac-helpers/Makefile.am: same

2004-04-13  Matthias Wimmer  <m@tthias.net>

    * clients.c: Make the flash hack optional, general cleanup
    * configure.in: same
    * conn.c: same
    * connect.c: same
    * jadc2s.h: same

2004-04-04  Matthias Wimmer  <m@tthias.net>

    * clients.c: Optional autodetection if SSL/TLS is used on port 5223
    * conn.c: same
    * jadc2s.c: same
    * jadc2s.h: same
    * jadc2s.xml.dist: same
    * connect.c: Removed debugging messages
